--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -4,3 +4,6 @@
 @import "./sass/components/home//navbar";
 @import "./sass/utils/utils";
 @import "./sass/components/home/homeArticle";
+@import "./sass/components/home/pagination";
+@import "./sass/components/home/createAt";
+@import "./sass/components/home/footer";
