--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -7,3 +7,4 @@
 @import "./sass/components/home/pagination";
 @import "./sass/components/home/createAt";
 @import "./sass/components/home/footer";
+@import "./sass/components/auth/register";
