--- a/frontend/src/sass/utils/_utils.scss
+++ b/frontend/src/sass/utils/_utils.scss
@@ -44,3 +44,57 @@
 .btn-block {
   width: 100%;
 }
+
+.card {
+  background-color: var(--main_bg);
+  padding: 10px 15px;
+}
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  grid-column-gap: 3px;
+  div {
+    width: 12px;
+    height: 12px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    animation: loading 1.4s infinite ease-out both;
+    -webkit-animation: loading 1.4s infinite ease-in-out both;
+  }
+  .spinner1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+  }
+  .spinner2 {
+    animation-delay: -0.16s;
+    -webkit-animation-delay: -0.16s;
+  }
+  @-webkit-keyframes loading {
+    0%,
+    80%,
+    100% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    }
+    40% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+    }
+  }
+  @keyframes loading {
+    0%,
+    80%,
+    100% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    }
+    40% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+    }
+  }
+}
