--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -8,3 +8,5 @@
 @import "./sass/components/home/createAt";
 @import "./sass/components/home/footer";
 @import "./sass/components/auth/register";
+@import "./sass/components/home/articleDetails";
+@import "./sass/components/home/comment";
