--- a/frontend/src/sass/components/home/_comment.scss
+++ b/frontend/src/sass/components/home/_comment.scss
@@ -52,12 +52,92 @@
           padding: 2px 6px;
           font-size: 13px;
           border-radius: 5px;
-          transition: all .5s;
+          transition: all 0.5s;
+        }
+      }
+      .reply-box.show {
+        display: flex;
+      }
+      .reply-box {
+        display: none;
+        flex-direction: column;
+        grid-gap: 12px;
+        .image-input {
+          margin-top: 8px;
+          display: flex;
+          justify-content: start;
+          grid-gap: 10px;
+          img {
+            height: 30px;
+            width: 30px;
+            border-radius: 50%;
+          }
+          input {
+            width: 100%;
+            outline: none;
+            border: none;
+            border-bottom: 1px solid gray;
+          }
+        }
+        .reply-submit {
+          display: flex;
+          justify-content: flex-end;
+          grid-gap: 8px;
+          button.cancel {
+            background-color: rgb(247, 26, 26);
+          }
+          .submit,
+          .cancel {
+            color: #fff;
+            background-color: #fa5c7c;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 400;
+            cursor: pointer;
+            border: 1px solid transparent;
+            padding: 5px 10px;
+            font-size: 13px;
+            border-radius: 5px;
+          }
+        }
+      }
+      .reply-comment {
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-between;
+        .reply-comment-image-name-time {
+          cursor: pointer;
+          display: flex;
+          justify-content: space-between;
+          grid-gap: 15px;
+          img {
+            height: 30px;
+            width: 30px;
+            border-radius: 50%;
+          }
         }
       }
     }
   }
   .action {
     cursor: pointer;
+  }
+}
+.comment-submit {
+  margin-top: 30px;
+  h3 {
+    color: #404040;
+  }
+  .form-group {
+    .form-control {
+      height: 130px;
+      padding: 13px;
+      border-radius: 4px;
+    }
+    .btn {
+      background-color: #e6c719;
+      color: #fff;
+    }
   }
 }
