--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -10,3 +10,5 @@
 @import "./sass/components/auth/register";
 @import "./sass/components/home/articleDetails";
 @import "./sass/components/home/comment";
+@import "./sass/components/dashboard/dashboard";
+@import "./sass/components/dashboard/dashboardNavbar";
