--- a/frontend/src/sass/components/dashboard/_dashboard.scss
+++ b/frontend/src/sass/components/dashboard/_dashboard.scss
@@ -2,4 +2,46 @@
   width: 100%;
   min-height: 100vh;
   background-color: #f0f0f0;
+  .adminInfo {
+    position: fixed;
+    z-index: 9999;
+    top: 73px;
+    border-radius: 3px;
+    width: 250px;
+    background-color: #fff;
+    right: 10px;
+    padding: 15px;
+    // top: -300px;
+    box-shadow: 0 0 0 0 rgba(90, 113, 208, 0.11),
+      0 4px 16px 0 rgba(167, 175, 183, 0.83);
+    border: 1px solid rgb(190, 194, 199);
+    transition: all 0.5s;
+    .image-email {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      img {
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+      }
+      span {
+        margin-top: 5px;
+      }
+    }
+    ul {
+      margin-top: 15px;
+      li {
+        padding: 8px 0px;
+        a {
+          color: #404040;
+        }
+        span {
+          color: #404040;
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
