--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -12,3 +12,4 @@
 @import "./sass/components/home/comment";
 @import "./sass/components/dashboard/dashboard";
 @import "./sass/components/dashboard/dashboardNavbar";
+@import "./sass/components/dashboard/sidebar";
