--- a/frontend/src/sass/components/dashboard/_dashboard.scss
+++ b/frontend/src/sass/components/dashboard/_dashboard.scss
@@ -11,6 +11,7 @@
     background-color: #fff;
     right: 10px;
     padding: 15px;
+    transform: scale(0);
     // top: -300px;
     box-shadow: 0 0 0 0 rgba(90, 113, 208, 0.11),
       0 4px 16px 0 rgba(167, 175, 183, 0.83);
@@ -43,5 +44,9 @@
         }
       }
     }
+  }
+  .dashboard-main-content {
+    min-height: 100vh;
+    width: 100%;
   }
 }
