--- a/frontend/src/sass/components/dashboard/_dashboardNavbar.scss
+++ b/frontend/src/sass/components/dashboard/_dashboardNavbar.scss
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     width: 275px;
-    background-color: #4b5077;
+    background-color: #f0f0f0;
     transition: all 0.5s;
     grid-gap: 10px;
     // padding: 0px 2px;
