--- a/frontend/src/sass/components/dashboard/_dashboardNavbar.scss
+++ b/frontend/src/sass/components/dashboard/_dashboardNavbar.scss
@@ -64,6 +64,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      input {
+        border-radius: 4px;
+      }
     }
     .user {
       display: flex;
