add dashboard article add option

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -13,3 +13,4 @@
 @import "./sass/components/dashboard/dashboard";
 @import "./sass/components/dashboard/dashboardNavbar";
 @import "./sass/components/dashboard/sidebar";
+@import "./sass/components/dashboard/dashboardArticle";
