add dashboard add article

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -14,3 +14,4 @@
 @import "./sass/components/dashboard/dashboardNavbar";
 @import "./sass/components/dashboard/sidebar";
 @import "./sass/components/dashboard/dashboardArticle";
+@import "./sass/components/dashboard/addArticle";
