--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -15,3 +15,4 @@
 @import "./sass/components/dashboard/sidebar";
 @import "./sass/components/dashboard/dashboardArticle";
 @import "./sass/components/dashboard/addArticle";
+@import "./sass/components/dashboard/allCategory";
