--- a/frontend/src/sass/utils/_utils.scss
+++ b/frontend/src/sass/utils/_utils.scss
@@ -98,3 +98,55 @@
     }
   }
 }
+
+.numof-search-newAdd {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  background-color: #b4ccd8;
+  padding: 10px;
+  border-radius: 2px;
+  .numof {
+    h2 {
+      color: #404040;
+    }
+  }
+  .searchof {
+    position: relative;
+    width: 50%;
+    .search {
+      background-color: gray;
+      border-radius: 4px;
+      input {
+        border-radius: 4px;
+      }
+    }
+    span {
+      position: absolute;
+      padding: 10px;
+      right: 0;
+      display: flex;
+      top: 0;
+      color: #404040;
+    }
+  }
+  .newAdd {
+    .btn {
+      background-color: #58b15c;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      &:hover {
+        background-color: #40b646;
+      }
+    }
+  }
+}
+.dashboard-article,
+.all-category {
+  margin-left: 275px;
+  padding: 85px 12px 12px 12px;
+  transition: all 0.5s;
+}
