rearange and comment rote

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -16,3 +16,4 @@
 @import "./sass/components/dashboard/dashboardArticle";
 @import "./sass/components/dashboard/addArticle";
 @import "./sass/components/dashboard/allCategory";
+@import "./sass/components/dashboard/addCategory";
