--- a/frontend/src/sass/components/dashboard/_allCategory.scss
+++ b/frontend/src/sass/components/dashboard/_allCategory.scss
@@ -17,6 +17,10 @@
           border-radius: 4px;
           box-shadow: 0px 0px 2px #fff;
           border: 1px solid rgb(207, 205, 205);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
           .name {
             display: flex;
             justify-content: center;
