sub admin profile

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -18,3 +18,4 @@
 @import "./sass/components/dashboard/allCategory";
 @import "./sass/components/dashboard/addCategory";
 @import "./sass/components/dashboard/allSubAdmin";
+@import "./sass/components/dashboard/subAdminProfile";
