--- a/frontend/src/sass/utils/_utils.scss
+++ b/frontend/src/sass/utils/_utils.scss
@@ -154,7 +154,8 @@
 .dashboard-article,
 .all-category,
 .add-category,
-.all-sub-admin {
+.all-sub-admin,
+.sub-admin-profile {
   margin-left: 275px;
   padding: 85px 12px 12px 12px;
   transition: all 0.5s;
