--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -19,3 +19,4 @@
 @import "./sass/components/dashboard/addCategory";
 @import "./sass/components/dashboard/allSubAdmin";
 @import "./sass/components/dashboard/subAdminProfile";
+@import "./sass/components/dashboard/dashboardComments";
