--- a/frontend/src/sass/components/dashboard/_addArticle.scss
+++ b/frontend/src/sass/components/dashboard/_addArticle.scss
@@ -76,6 +76,14 @@
             color: #404040;
           }
         }
+        .image {
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 3px;
+          }
+        }
         #image {
           display: none;
         }
