--- a/frontend/src/sass/utils/_utils.scss
+++ b/frontend/src/sass/utils/_utils.scss
@@ -155,7 +155,8 @@
 .all-category,
 .add-category,
 .all-sub-admin,
-.sub-admin-profile {
+.sub-admin-profile,
+.dashboard-comments {
   margin-left: 275px;
   padding: 85px 12px 12px 12px;
   transition: all 0.5s;
