category paginaion done

--- a/frontend/src/sass/components/home/_pagination.scss
+++ b/frontend/src/sass/components/home/_pagination.scss
@@ -13,7 +13,7 @@
       }
     }
     .not-hover {
-      display: none;
+      // display: none;
       &:hover {
         background-color: #b4ccd8;
       }
