--- a/frontend/src/sass/components/home/_homeArticle.scss
+++ b/frontend/src/sass/components/home/_homeArticle.scss
@@ -51,7 +51,7 @@
             margin-right: 5px;
             span {
               color: gray;
-              text-transform: uppercase;
+              text-transform: capitalize;
               line-height: 2;
               margin-right: 5px;
               font-size: 12px;
