home article category and tag find from all article using mongoose built in query

--- a/frontend/src/sass/components/home/_home.scss
+++ b/frontend/src/sass/components/home/_home.scss
@@ -167,6 +167,8 @@
                   transition: all 0.5s;
                   border-radius: 2px;
                   font-weight: 400;
+                  width: 100%;
+                  text-align: center;
                   a {
                     color: #fff;
                   }
