--- a/frontend/src/sass/components/home/_footer.scss
+++ b/frontend/src/sass/components/home/_footer.scss
@@ -45,7 +45,7 @@ section#footer {
                     color: rgb(214, 207, 207);
                     font-size: 10px;
                     line-height: 2.5;
-                    text-transform: uppercase;
+                    text-transform: capitalize;
                     font-weight: 700;
                   }
                 }
