--- a/frontend/src/sass/components/auth/_register.scss
+++ b/frontend/src/sass/components/auth/_register.scss
@@ -174,6 +174,7 @@
             height: 35px;
             border-radius: 50%;
             border: 1px solid #c2bfbf;
+            overflow: hidden;
             img {
               width: 100%;
               height: 100%;
